Fix ColorBar animation z-index

--- a/src/sass/components/organisms/_header.scss
+++ b/src/sass/components/organisms/_header.scss
@@ -195,6 +195,7 @@ $header-main-height: 60px;
       transform: translateY(0);
       opacity: 1;
       visibility: visible;
+      z-index: 11;
     }
   }
 }
